// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cache.melody.twig - melody-verify: cache.melody.twig 1`] = `
{% cache globally using key craft.some.rather.long.property.chain.request.path for 3 weeks %}
    {% for block in entry.myMatrixField %}
        <p>{{ block.text }}</p>
    {% endfor %}
{% endcache %}

{# prettier-ignore #}
{% cache globally using key craft.some.rather.long.property.chain.request.path for 3 weeks %}
    {% for block in entry.myMatrixField %}
        <p>{{ block.text }}</p>
    {% endfor %}
{% endcache %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`header.melody.twig - melody-verify: header.melody.twig 1`] = `
{%  header "Cache-Control: max-age=" ~ (expiry.timestamp - now.timestamp)  %}

{# prettier-ignore #}
{%  header "Cache-Control: max-age=" ~ (expiry.timestamp - now.timestamp)  %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`includeCssFile.melody.twig - melody-verify: includeCssFile.melody.twig 1`] = `
{% includeCssFile "/assets/css/layouts/" ~ entry.layout ~ ".css" %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`nav.melody.twig - melody-verify: nav.melody.twig 1`] = `
{% nav entry in entries %}
    <li>
        <a href="{{ entry.url }}">{{ entry.title }}</a>
        {% ifchildren %}
            <ul>
                {% children %}
            </ul>
        {% endifchildren %}
    </li>
{% endnav %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`paginate.melody.twig - melody-verify: paginate.melody.twig 1`] = `
{% paginate craft.entries.section('blog').limit(10) as pageInfo, pageEntries %}

{% paginate craft.entries.section('blog').limit(10) as pageInfo, pageEntries, pageProperties %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`redirect.melody.twig - melody-verify: redirect.melody.twig 1`] = `
{% redirect "pricing" 301 %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`switch.melody.twig - melody-verify: switch.melody.twig 1`] = `
{% switch matrixBlock.type %}



    {% case "text" %}

        {{ matrixBlock.textField | markdown }}

    {% case "image" %}

        {{ matrixBlock.image[0].getImg() }}

    {% default %}

        <p>A font walks into a bar.</p>
        <p>The bartender says, “Hey, we don’t serve your type in here!”</p>

{% endswitch %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;
